--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <h1>Hello from HTML!</h1>
     <div id="app">
       <!-- VUE CODE RUNS IN THIS DIV WITH THIS ID -->
       <h2>{{ message }}</h2>
       <p>{{ name }}</p>
+      <button v-on:click="changeMessage()">Click me!</button>
     </div>
   </body>
 </html>
