--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h2>{{ message }}</h2>
       <p>{{ name }}</p>
       <button v-on:click="changeMessage()">Click me!</button>
+      <input type="text" v-model="name" />
     </div>
   </body>
 </html>
