--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <p>{{ name }}</p>
       <button v-on:click="changeMessage()">Click me!</button>
       <input type="text" v-model="name" />
+      <div>
+        <button v-on:click="showInfo = !showInfo">Toggle</button>
+        <p v-if="showInfo">Extra Information</p>
+      </div>
     </div>
   </body>
 </html>
