--- a/todos.html
+++ b/todos.html
@@ -10,9 +10,13 @@
   <body>
     <h1>Hello from HTML!</h1>
     <div id="app">
-      <button v-on:click="loadTodos()">Load Todos</button>
+      <h2>New Todo:</h2>
+      Title: <input type="text" v-model="title" /> <br />
+      <button v-on:click="addTodo()">Create Todo</button>
+
       <div v-for="todo in todos">
-        <p>{{ todo.title }}: {{ todo.completed }}</p>
+        <h4>Title: {{ todo.title }}</h4>
+        <p>Completed: {{ todo.completed }}</p>
       </div>
     </div>
   </body>
